--- a/templates/informationbrain.html
+++ b/templates/informationbrain.html
@@ -1,49 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@700&display=swap" rel="stylesheet">
-
-    <title>Skin Diagnosis and Brain prognosis</title>
-
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">NeuroDerm Analytica</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item ">
-                    <!-- <a class="nav-link" href={{url_for('home')}}>Home </a> -->
-                    <a class="nav-link" href="/templates/index.html">Home </a>
-                </li>
-                <li class="nav-item ">
-                    <!-- <a class="nav-link" href={{url_for('information')}}>Information </a> -->
-                    <a class="nav-link" href="/templates/information.html">Information(Skin)</a>
-                </li>
-                <li class="nav-item active">
-                    <!-- <a class="nav-link" href={{url_for('information')}}>Information </a> -->
-                    <a class="nav-link" href="/templates/informationbrain.html">Information(Brain)</a>
-                </li>
-                <li class="nav-item">
-                    <!-- <a class="nav-link" href={{url_for('help')}}>Help</a> -->
-                    <a class="nav-link" href="/templates/help.html">Help</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+{% extends 'base.html' %}
+{% block content %}
 
 <!-- Glioma -->
 <div class="container mt-2">
@@ -154,6 +110,4 @@
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
 
-</body>
-
-</html>
+{% endblock %}
