--- a/templates/help.html
+++ b/templates/help.html
@@ -1,59 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
-    integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-
-    <title>Skin Diagnosis and Brain prognosis</title>
-
-
-  <style>
-    * {
-      margin: 0px;
-      padding: 0px;
-      box-sizing: border-box;
-    }
-  </style>
-</head>
-
-<body>
-
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">NeuroDerm Analytica</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item ">
-          <!-- <a class="nav-link" href={{url_for('home')}}>Home </a> -->
-          <a class="nav-link" href="/templates/index.html">Home </a>
-        </li>
-        <li class="nav-item">
-          <!-- <a class="nav-link" href={{url_for('information')}}>Information </a> -->
-          <a class="nav-link" href="/templates/information.html">Information </a>
-        </li>
-        <li class="nav-item ">
-          <!-- <a class="nav-link" href={{url_for('information')}}>Information </a> -->
-          <a class="nav-link" href="/templates/informationbrain.html">Information(Brain)</a>
-      </li>
-        <li class="nav-item active">
-          <!-- <a class="nav-link" href={{url_for('help')}}>Help</a> -->
-          <a class="nav-link" href="/templates/help.html">Help</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
+{% extends 'base.html' %}
+{% block content %}
 
   <section>
     <div class="container">
@@ -162,6 +108,4 @@
     </div>
   </section>
 
-</body>
-
-</html>
+{% endblock %}
