--- a/templates/result.html
+++ b/templates/result.html
@@ -18,11 +18,11 @@
                 <div>
                     <h1 style="padding: 15px; background-color: rgb(255, 0, 0); color: rgb(0, 0, 0);"
                         class="text-center mb-5 content-h1 rounded">
-                        {{pred_output}} </h1>
+                        {{data.disease}} </h1>
                 </div>
 
                 <h2>Disease Name/</span></h2>
-                <h4 style="line-height: 100%;">Acne</h4>
+                <h4 style="line-height: 100%;">{{data.disease}}</h4>
                 <hr class="w-100 mx-auto ">
             </div>
         </div>
