--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='help.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename='result.css')}}">
+    <!-- <link rel="stylesheet" href="{{url_for('static', filename='result.css')}}"> -->
 
     <title>Skin Diagnosis and Brain prognosis</title>
 </head>
