--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
     </section>
         <div class="container gallery-h1">
 
-            <h1 class="text-center mt-4 mb-4">Indian Chemicals Solution Industries./भारतीय रसायन समाधान उद्योग |</h1>
+            <h1 class="text-center mt-4 mb-4">Some Official Websites for Referrence</h1>
 
 
 
@@ -89,76 +89,25 @@
             <div class="row text-center text-lg-left">
 
                 <div class="col-lg-4 col-md-4 col-6 col-12">
-                    <a href="https://www.dhanuka.com/products" class="d-block mb-4 h-100">
-                        <h4>Dhanuka Agritech LTD.</h4>
-                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/Indian Brands/Dhanuka Agritech ltd.png') }}" alt="">
-                        <img class="img-fluid img-thumbnail" src="/static/images/Indian Brands/Dhanuka Agritech ltd.png"
-                            alt="">
+                    <a href="https://www.mayoclinic.org/diseases-conditions/traumatic-brain-injury/symptoms-causes/syc-20378557" class="d-block mb-4 h-100">
+                        <h4>MAYO CLINIC</h4>
+                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/mayoclinic.png') }}" alt="">
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-6 col-12">
-                    <a href="https://www.coromandel.biz/" class="d-block mb-4 h-100">
-                        <h4>Coromandel International LTD.</h4>
-                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/Indian Brands/Coromandel International ltd.png') }}" alt="">
-                        <img class="img-fluid img-thumbnail"
-                            src="/static/images/Indian Brands/Coromandel International ltd.png" alt="">
+                    <a href="https://www.healthline.com/health/brain-disorders" class="d-block mb-4 h-100">
+                        <h4>HEALTHLINE</h4>
+                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/healthline.png') }}" alt="">
                     </a>
                 </div>
 
                 <div class="col-lg-4 col-md-4 col-6 col-12">
-                    <a href="https://www.rallis.com/india-business/crop-protection" class="d-block mb-4 h-100">
-                        <h4>Rallis India</h4>
-                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/Indian Brands/Ralllis.png') }}" alt="">
-                        <img class="img-fluid img-thumbnail" src="/static/images/Indian Brands/Ralllis.png" alt="">
+                    <a href="https://my.clevelandclinic.org/health/diseases/22934-brain-diseases" class="d-block mb-4 h-100">
+                        <h4>CLEVELAND CLINIC</h4>
+                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/clevelandclinic.png') }}" alt="">
                     </a>
                 </div>
-                <div class="col-lg-4 col-md-4 col-6 col-12">
-                    <a href="http://www.groupindogulf.com/products2.php?qwertyu=subsubcat&qwertyu_id=13"
-                        class="d-block mb-4 h-100">
-                        <h4>Indogulf Crop Sciences LTD.</h4>
-                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/Indian Brands/Indogulf.png') }}" alt="">
-                        <img class="img-fluid img-thumbnail" src="/static/images/Indian Brands/Indogulf.png" alt="">
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6 col-12">
-                    <a href="https://aimcopesticides.com/products/nutrients-bio" class="d-block mb-4 h-100">
-                        <h4>AIMCO Pesticides LTD.</h4>
-                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/Indian Brands/aimco.png') }}" alt="">
-                        <img class="img-fluid img-thumbnail" src="/static/images/Indian Brands/aimco.png" alt="">
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6 col-12">
-                    <a href="https://www.bharatgroup.co.in/bharat-rasayan/product.php" class="d-block mb-4 h-100">
-                        <h4>Bharat Rasayan LTD.</h4>
-                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/Indian Brands/bharat.png') }}" alt="">
-                        <img class="img-fluid img-thumbnail" src="/static/images/Indian Brands/bharat.png" alt="">
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6 col-12">
-                    <a href="https://www.piindustries.com/our-business/Our-Business/products-and-services"
-                        class="d-block mb-4 h-100">
-                        <h4>PI Industries LTD.</h4>
-                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/Indian Brands/pi.png') }}"alt="">
-                        <img class="img-fluid img-thumbnail" src="/static/images/Indian Brands/pi.png" alt="">
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6 col-12">
-                    <a href="https://sumichem.co.in/plant-nutrition-and-plant-growth-regulators.php"
-                        class="d-block mb-4 h-100">
-                        <h4>Sumitomo Chemicals India LTD.</h4>
-                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/Indian Brands/sumitomo.png') }}" alt="">
-                        <img class="img-fluid img-thumbnail" src="/static/images/Indian Brands/sumitomo.png" alt="">
-                    </a>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6 col-12">
-                    <a href="https://www.upl-ltd.com/agricultural-solutions/crop-protection/insecticides"
-                        class="d-block mb-4 h-100">
-                        <h4>UPL LTD.</h4>
-                        <img class="img-fluid img-thumbnail" src="{{ url_for('static', filename='images/Indian Brands/upl.png') }}" alt="">
-                        <img class="img-fluid img-thumbnail" src="/static/images/Indian Brands/upl.png" alt="">
-                    </a>
-                </div>
-
+                
 
 
 
